--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,1 +1,20 @@
-<h1>111</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>kos-test-page</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>this is test page</h1>
+    <hr />
+    <p>Hello Word</p>
+  </body>
+</html>
