--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,70 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Node OAuth2 Demo</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Luck -Resposive Coming Soon Page</title>
+    <meta name="description" content="Luck - Resposive Coming Soon Page" />
+    <meta name="keywords" content="HTML,CSS,JavaScript,jQuery" />
+    <meta name="author" content="Pro web" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!--    <link rel="icon" href="./favicon-icon.png" sizes="16x16">-->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="stylesheet" href="//oss.drnet.xyz/www/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="//oss.drnet.xyz/www/css/fonts.css" />
+    <link rel="stylesheet" href="//oss.drnet.xyz/www/css/progress.css" />
+    <!-- / progress css -->
+    <link rel="stylesheet" href="//oss.drnet.xyz/www/css/bootstrap.min.css" />
+    <!-- / Bootstrap  css Version -3.3.6 -->
+    <link id="colors_option" rel="stylesheet" href="//oss.drnet.xyz/www/css/yellow-color.css" />
+    <!-- / Colors css for template main color -->
+    <link rel="stylesheet" href="//oss.drnet.xyz/www/css/style.css" />
+    <!-- / Template main style css -->
   </head>
 
-  <body>
-    <h1>this is test page</h1>
-    <hr />
-    <p>Hello Word</p>
-    <div id="login">
-      <svg
-        class="octicon octicon-mark-github v-align-middle"
-        height="32"
-        viewBox="0 0 16 16"
-        version="1.1"
-        width="32"
-        aria-hidden="true"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
-        ></path>
-      </svg>
+  <body class="preloder_priview">
+    <!-- preloder  start/-->
+    <div id="loader-wrapper">
+      <div id="loader"></div>
     </div>
+    <!--/ preloder  end-->
+    <div class="fix header-area welcome-section">
+      <!-- =======TEMPLATHEADER WELCOME SECTIONLEMENT START==== \-->
+      <!-- Welcome Background  Images start \-->
+      <div
+        class="welcome-banner"
+        style="background: url(//oss.drnet.xyz/www/img/welcome.jpg) no-repeat scroll center center;"
+      >
+        <div class="welcome-overlay-center"></div>
+      </div>
+      <!--/ Welcome Background Images End-->
+      <div class="main-page-content">
+        <!-- Template Box shap start \-->
+        <div class="box-shap-main">
+          <div class="box-shap box-top">
+            <div class="inner-border inside-box"></div>
+          </div>
+          <div class="box-shap box-right">
+            <div class="inner-border inside-box"></div>
+          </div>
+          <div class="box-shap box-left">
+            <div class="inner-border inside-box"></div>
+          </div>
+          <div class="box-shap box-bottom">
+            <div class="inner-border inside-box"></div>
+          </div>
+        </div>
+        <!--/ Template Box shap end-->
+        <div class="nice-scoll main-wrapper">
+          <canvas id="pixie"></canvas>
+          <div class="text-center main-cotainer container">
+            <div class="content-tab-wrapper">
+              <header class="nav-wrapper">
+                <div class="container"></div>
+              </header>
+              <!--/ Template header end-->
 
-    <a
-      href="https://openapi.baidu.com/oauth/2.0/authorize?response_type=code&client_id=VSB4cdUziZoTQ63ewVAAikCx&redirect_uri=http://127.0.0.1:3000/oauth/baidu"
-      >百度</a
-    >
+              <div class="tab-pane-container">
+                <!-- ======= TEMPLATE HOME SECTION ELEMENT START==== \-->
+                <section class="tab-active" id="home">
+                  <div class="content-table">
+                    <div class="animated home-content content-table-call main-content">
+                      <!-- Logo text start \-->
+                      <div class="logo">
+                        <a href="">
+                          <h2><span>L</span>uck</h2>
+                        </a>
 
-    <button id="get">获取token</button>
-    <button id="parse">解析token</button>
+                        <!-- Logo sparator start \-->
+                        <div class="sparator-main">
+                          <span class="sparator"></span>
+                          <span class="sparator-border"></span>
+                        </div>
+                        <!--/ Logo sparator end-->
+                      </div>
+                      <!--/ Logo text end-->
 
-    <script>
-      const client_id = '85545506c0a8ba719f36';
-      const authorize_uri = 'https://github.com/login/oauth/authorize';
-      const redirect_uri = 'http://127.0.0.1:3000/oauth/github';
-      const link = document.getElementById('login');
-      link.onclick = () => {
-        location.href = `${authorize_uri}?client_id=${client_id}&redirect_uri=${redirect_uri}`;
-      };
-      const get = document.getElementById('get');
-      const parse = document.getElementById('parse');
-      let token = null;
-      get.onclick = async () => {
-        const result = await axios({
-          method: 'post',
-          url: `/user/add`
-        });
-        console.log(result.data.result.data);
-        token = result.data.result.data;
-      };
-      parse.onclick = async () => {
-        const result = await axios({
-          method: 'post',
-          url: `/user/delete`,
-          headers: {
-            accept: 'application/json',
-            Authorization: `Bearer ${token}`
-          }
-        });
-      };
-    </script>
+                      <!-- Home section main text start \-->
+                      <div class="welcome-text">
+                        <h1 class="fade-text"><span>We</span> have been together</h1>
+                        <h1 class="fade-text"><span>Luck</span> is coming very soon</h1>
+                      </div>
+                      <!--/ Home section main text end-->
+
+                      <!--Count down start \-->
+                      <div class="count-down">
+                        <div id="count-down-wrapper">
+                          <ul class="list-inline text-center">
+                            <li class="days-count">
+                              <h2 class="days">00</h2>
+                              <h3 class="timeRefDays">days</h3>
+                            </li>
+                            <li class="hours-count">
+                              <h2 class="hours">00</h2>
+                              <h3 class="timeRefHours">hours</h3>
+                            </li>
+                            <li class="minutes-count">
+                              <h2 class="minutes">00</h2>
+                              <h3 class="timeRefMinutes">minutes</h3>
+                            </li>
+                            <li class="seconds-count">
+                              <h2 class="seconds">00</h2>
+                              <h3 class="timeRefSeconds">seconds</h3>
+                            </li>
+                          </ul>
+                        </div>
+                        <!-- /Count down end-->
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </div>
+
+              <!-- Footer copyright text start \-->
+              <footer class="copyright">
+                <p>
+                  &copy; 2020 <a href="/">Dr丶net</a> All Rights Reserved
+                  <a href="//www.beian.miit.gov.cn/">豫ICP备17000639号</a>
+                </p>
+              </footer>
+              <!--/ Footer copyright text end-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="//libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//oss.drnet.xyz/www/js/bootstrap.min.js"></script>
+    <!-- / Bootstrap  js Version -3.3.6 -->
+    <script src="//oss.drnet.xyz/www/js/waypoints.min.js"></script>
+    <!-- / Jquery Waypoints  js Version -2.0.3 -->
+    <script src="//oss.drnet.xyz/www/js/jquery.counterup.min.js"></script>
+    <!-- / Jquery counterup min  js Version -1.0 -->
+    <script src="//oss.drnet.xyz/www/js/appear.js"></script>
+    <!-- / Jquery appear Js -->
+    <script src="//oss.drnet.xyz/www/js/count-down.js"></script>
+    <!--/ jquery count-down js -->
+    <script src="//oss.drnet.xyz/www/js/Firefly.js"></script>
+    <script src="//oss.drnet.xyz/www/js/plugins.js"></script>
+    <script src="//oss.drnet.xyz/www/js/main.js"></script>
   </body>
 </html>
