--- a/src/views/socket1.ejs
+++ b/src/views/socket1.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>测试demo</title>
+    <title>测试demo111</title>
     <!--socket.io-->
     <script src="https://cdn.bootcss.com/socket.io/2.1.1/socket.io.js"></script>
   </head>
